<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:background="#000000">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="45"
        android:weightSum="100"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:textAlignment="center"
            style="@style/TextViewColor"
            android:text="TextView"
            android:visibility="invisible"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/accounticon"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            style="@style/TextViewColor"
            android:text="@string/account" />

    </LinearLayout>


    <EditText
        android:id="@+id/idnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="date"
        android:textColorHint="#888888"
        android:textColor="#FF5722"
        android:hint="@string/sid"
        android:textSize="17sp"
        android:textAlignment="center"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text=""
        android:visibility="invisible"/>

    <Spinner
        android:id="@+id/sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF5722" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text=""
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:textColorHint="#888888"
        android:textColor="#FF5722"
        android:textSize="17sp"
        android:textAlignment="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text=""
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/domain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/domain"
        android:textSize="17sp"
        style="@style/EditTextColor"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text=""
        android:visibility="invisible"/>
    <Button
        android:id="@+id/applyusersettings"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="6"
        android:text="@string/done"
        android:textAlignment="center"
        android:background="@mipmap/btn_background_norm"
        style="@style/EditTextColor" />


</LinearLayout>